Make monorepo Railway deployable (api+app)

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,5 +1,3 @@
-OPENAI_API_KEY=your-openai-api-key
-DATABASE_URL=sqlite:///./classmate.db
-ALLOWED_ORIGINS=http://localhost:3000
-CLERK_JWT_ISSUER=https://your-clerk-instance.clerk.accounts.dev
-CLERK_JWKS_URL=https://your-clerk-instance.clerk.accounts.dev/.well-known/jwks.json
+OPENAI_API_KEY=
+DATABASE_URL=sqlite:///./railway.db
+ALLOWED_ORIGINS=*
