Fix Railway build/start to run from app directory

--- a/app/railway.toml
+++ b/app/railway.toml
@@ -1,5 +1,6 @@
 [build]
 builder = "NIXPACKS"
+buildCommand = "cd app && npm ci && npm run build"
 
 [deploy]
-startCommand = "npm run start"
+startCommand = "cd app && npm run start"
