Flatten Next app directory structure

--- a/app/railway.toml
+++ b/app/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "cd app && npm ci && npm run build"
+buildCommand = "npm run build"
 
 [deploy]
-startCommand = "cd app && npm run start"
+startCommand = "npm run start"
