--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.3",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.563.0",
