--- a/app/railway.toml
+++ b/app/railway.toml
@@ -1,7 +1,7 @@
 [build]
 builder = "NIXPACKS"
 rootDirectory = "app"
-buildCommand = "npm ci && npm run build"
+buildCommand = "npm run build"
 
 [deploy]
 startCommand = "npm run start"
