--- a/Frontend/nixpacks.toml
+++ b/Frontend/nixpacks.toml
@@ -5,7 +5,10 @@ nixPkgs = ["nodejs_20"]
 cmds = ["npm ci --include=dev"]
 
 [phases.build]
-cmds = ["npm run build"]
+cmds = [
+  "npm run build",
+  "npm rebuild sharp"
+]
 
 [start]
-cmd = "node .next/standalone/server.js"
+cmd = "HOSTNAME=0.0.0.0 node .next/standalone/server.js"
